samples/_failures_safe/1761710417_dc957f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb6ce0ac.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_cb6ce0ac.c:146: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_cb6ce0ac.c:145:9: error: expected declaration or statement at end of input
  145 |         if
      |         ^~
./samples/SAFE/__tmp_cb6ce0ac.c:145:9: error: expected declaration or statement at end of input
